--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Hermes Francisco",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "multer": "^1.4.2",
